adding TransportTask federation

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -28,8 +28,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_BUILD_TYPE Debug)
 
 include_directories(/home/yonchicy/OpenRTI/include/rti1516)
-add_library(ba-hla-lib ExampleFedAmb.cpp ExampleCPPFederate.cpp)
-add_executable(ba-hla main.cpp)
-target_link_libraries(ba-hla ba-hla-lib  /home/yonchicy/OpenRTI/build/lib64/librti1516.so /home/yonchicy/OpenRTI/build/lib64/libfedtime1516.so )
+#add_library(ba-hla-lib ExampleFedAmb.cpp ExampleCPPFederate.cpp)
+#add_executable(ba-hla main.cpp)
+#add_library(ba-hla-lib ExampleFedAmb.cpp ExampleCPPFederate.cpp)
+file(GLOB SRC_FILES "*.cpp")
+add_executable(ba-hla ${SRC_FILES})
+target_link_libraries(ba-hla  /home/yonchicy/OpenRTI/build/lib64/librti1516.so /home/yonchicy/OpenRTI/build/lib64/libfedtime1516.so )
 
 install(TARGETS ba-hla DESTINATION bin)
